--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -73,7 +73,7 @@ RUN git clone --depth 1 -b releases/stable git://github.com/mongodb/mongo-cxx-dr
 RUN git clone -b master --depth 1 https://github.com/EOSIO/eos.git --recursive \
     && cd eos \
     && cmake -H. -B"/tmp/build" -GNinja -DCMAKE_BUILD_TYPE=Release -DWASM_LLVM_CONFIG=/opt/wasm/bin/llvm-config -DCMAKE_CXX_COMPILER=clang++ \
-       -DCMAKE_C_COMPILER=clang -DCMAKE_INSTALL_PREFIX=/opt/eosio  -DSecp256k1_ROOT_DIR=/usr/local \
+       -DCMAKE_C_COMPILER=clang -DCMAKE_INSTALL_PREFIX=/opt/eos  -DSecp256k1_ROOT_DIR=/usr/local \
     && cmake --build /tmp/build --target install
 
 
@@ -81,10 +81,10 @@ RUN git clone -b master --depth 1 https://github.com/EOSIO/eos.git --recursive \
 FROM ubuntu:16.04
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install openssl && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /usr/local/lib/* /usr/local/lib/
-COPY --from=builder /opt/eosio/bin /opt/eosio/bin
+COPY --from=builder /tmp/build/install/bin /opt/eosio/bin
 COPY --from=builder /tmp/build/contracts /contracts
-COPY --from=builder /eos/Docker/config.ini /eos/genesis.json /
-COPY start_eosiod.sh /opt/eosio/bin/start_eosiod.sh
+COPY --from=builder /eos/genesis.json /
+COPY --from=builder /eos/Docker/start_eosiod.sh /opt/eosio/bin/start_eosiod.sh
 RUN chmod +x /opt/eosio/bin/start_eosiod.sh
 ENV LD_LIBRARY_PATH /usr/local/lib
 VOLUME /opt/eosio/bin/data-dir
