--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     - "8888:8888"
     - "9876:9876"
     volumes:
-      - /data/store/eos:/opt/eos/bin/data-dir
+      - ${HOME}/.eosio/eos:/opt/eos/bin/data-dir
